--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			console.log("ressssss"+data.cod);
 
 			if(data.cod==404) {
-		        alet(data.message);
+		        alert(data.message);
 		    } else {
 				alert("Temperature "+data.main.temp);
 			}
